Bug 89363 - [test case] Radio button bad behavior outside form tag
Summary: [test case] Radio button bad behavior outside form tag
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml forms (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 103847 122479 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-09-12 17:19 UTC by Bruno A. Crespo
Modified: 2008-11-22 18:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The test case (125 bytes, text/html)
2005-02-20 17:56 UTC, Allan Sandfeld
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bruno A. Crespo 2004-09-12 17:19:30 UTC
Version:           3.2.3 (using KDE KDE 3.2.3)
Installed from:    Gentoo Packages
Compiler:          gcc 3.3.2 
OS:                Linux

In the following html file, the behavior of the radio button is not correct
(you can select all the radio buttons simultaneously, but you can unselect),
if you put <form> </form> tags it works correctly.

<html>
<input type="radio" name="radio1"><input type="radio" name="radio1"><input type="radio" name="radio1" checked>
</html>
Comment 1 Allan Sandfeld 2005-02-20 17:56:46 UTC
Created attachment 9742 [details]
The test case
Comment 2 Maksim Orlovich 2006-01-30 06:27:38 UTC
*** Bug 103847 has been marked as a duplicate of this bug. ***
Comment 3 Tommi Tervo 2006-02-22 13:17:57 UTC
*** Bug 122479 has been marked as a duplicate of this bug. ***
Comment 4 Pablo Baena 2008-01-09 14:13:23 UTC
This bug is still happening on konqueror 3.5.8. Can someone please change the component to 'khtml forms'? Seems that no one is paying attention to this.
Comment 5 Maksim Orlovich 2008-11-22 18:03:57 UTC
SVN commit 887724 by orlovich:

Fix radio button grouping outside forms

BUG:89363


 M  +17 -2     html_formimpl.cpp  
 M  +6 -0      html_miscimpl.cpp  
 M  +1 -0      html_miscimpl.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=887724