Fix radio button grouping outside forms

BUG:89363

svn path=/trunk/KDE/kdelibs/; revision=887724